--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "friendly-url": "^1.0.3",
     "jquery": "^3.2.1",
     "meteor-node-stubs": "^0.3.2",
-    "paypal-rest-sdk": "^1.7.1",
+    "paypal-rest-sdk": "^2.0.0-beta.0",
     "popper.js": "^1.12.6"
   }
 }
