--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.0.0-beta.2",
     "friendly-url": "^1.0.3",
+    "google-libphonenumber": "^3.0.8",
     "jquery": "^3.2.1",
     "meteor-node-stubs": "^0.3.2",
     "paypal-rest-sdk": "^2.0.0-beta.0",
