--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "bootstrap": "^4.0.0-beta.2",
     "friendly-url": "^1.0.3",
     "google-libphonenumber": "^3.0.8",
