--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
+    "bootstrap": "^4.0.0-beta.2",
+    "chrono-node": "^1.3.5",
     "friendly-url": "^1.0.3",
     "google-libphonenumber": "^3.0.8",
     "jquery": "^3.2.1",
