--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-libphonenumber": "^3.0.8",
     "jquery": "^3.2.1",
     "meteor-node-stubs": "^0.3.2",
+    "moment": "^2.19.2",
     "paypal-rest-sdk": "^2.0.0-beta.0",
     "popper.js": "^1.12.6",
     "vue": "git://github.com/meteor-vue/vue.git#meteor",
