--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.40",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "chrono-node": "^1.3.5",
     "friendly-url": "^1.0.3",
-    "google-libphonenumber": "^3.0.9",
-    "jquery": "^3.2.1",
+    "google-libphonenumber": "^3.0.12",
+    "jquery": "^3.3.1",
     "meteor-node-stubs": "^0.3.2",
-    "moment": "^2.19.3",
-    "paypal-rest-sdk": "^2.0.0-beta.0",
+    "moment": "^2.20.1",
+    "paypal-rest-sdk": "^2.0.0-rc.1",
     "popper.js": "^1.13.0",
     "vue": "git://github.com/meteor-vue/vue.git#meteor",
     "vue-meteor-tracker": "^1.2.3",
