--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^1.0.3",
     "bootstrap": "^4.0.0",
     "chrono-node": "^1.3.5",
+    "fastclick": "^1.0.6",
     "friendly-url": "^1.0.3",
     "google-libphonenumber": "^3.0.12",
     "jquery": "^3.3.1",
